Fix tests after rebase